--- a/source/_data/header.njk
+++ b/source/_data/header.njk
@@ -2,6 +2,6 @@
 <script src="/assets/heti-addon.min.js"></script>
 <script>
   const heti = new Heti('.post-body');
-  // heti.autoSpacing(); // 自动进行中西文混排美化和标点挤压
-  // console.log("done");
+  heti.autoSpacing(); // 自动进行中西文混排美化和标点挤压
+  console.log("done");
 </script>
